Update environment variable assignment in workflow
Due to GitHub Actions removing set-env and add-path commands.
https://github.blog/changelog/2020-11-09-github-actions-removing-set-env-and-add-path-commands-on-november-16/

--- a/.github/workflows/deploy-via-ssh.yml
+++ b/.github/workflows/deploy-via-ssh.yml
@@ -147,7 +147,7 @@ jobs:
         $Minute = $VersionDate.Minute.ToString().PadLeft(2, "0")
         $CurrentVersion = "$Year.$Month.$Day.$Hour$Minute"
         
-        echo "::set-env name=CurrentVersion::$CurrentVersion"
+        echo "CurrentVersion=$CurrentVersion" >> $GITHUB_ENV
         # This was needed in Azure Pipelines.
         #[System.Console]::WriteLine("##vso[task.setvariable variable=CurrentVersion]$CurrentVersion")
 
