--- a/.github/workflows/deploy-to-iis.yml
+++ b/.github/workflows/deploy-to-iis.yml
@@ -8,7 +8,7 @@
 #     - Select the user account to use for publishing.
 #     - Click OK.
 #
-# 2. Create the below Secrets in GitHub.
+# 2. Create the below Secrets to an environment name 'build' in GitHub.
 #     - BASE64_ENCODED_PFX
 #         - See below section to get this string.
 #     - PFX_KEY
@@ -78,6 +78,7 @@ jobs:
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
 
     env:
+      name: build
       Solution_Name: Remotely.sln                               # Replace with your solution name, i.e. MyWpfApp.sln.
       Configuration: ${{ matrix.configuration }}
       Test_Project_Path: Tests\Tests.csproj                     # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
@@ -198,4 +199,10 @@ jobs:
 
     # Remove the pfx
     - name: Remove the pfx
-      run: Remove-Item -path $env:GITHUB_WORKSPACE\GitHubActionsWorkflow.pfx
+      run: |
+        if (!($env:PfxBase64)) {
+          echo "Skipping pfx removal because Base64_Encoded_Pfx secret is missing."
+          return
+        }
+        
+        Remove-Item -path $env:GITHUB_WORKSPACE\GitHubActionsWorkflow.pfx
