--- a/.github/workflows/deploy-via-ssh.yml
+++ b/.github/workflows/deploy-via-ssh.yml
@@ -12,7 +12,7 @@
 #    It's a good idea to turn off password-based authentication.
 #
 #
-# 2. Create the below Secrets in GitHub.
+# 2. Create the below Secrets to an environment name 'build' in GitHub.
 #     - BASE64_ENCODED_PFX
 #         - See below section to get this string.
 #     - PFX_KEY
@@ -89,6 +89,7 @@ jobs:
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
 
     env:
+      name: build
       Solution_Name: Remotely.sln                               # Replace with your solution name, i.e. MyWpfApp.sln.
       Configuration: ${{ matrix.configuration }}
       Test_Project_Path: Tests\Tests.csproj                     # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
