--- a/.github/workflows/deploy-to-iis.yml
+++ b/.github/workflows/deploy-to-iis.yml
@@ -198,4 +198,4 @@ jobs:
 
     # Remove the pfx
     - name: Remove the pfx
-      run: Remove-Item -path $env:GITHUB_WORKSPACE\GitHubActionsWorkflow.pfx
+      run: Remove-Item -path $env:GITHUB_WORKSPACE\GitHubActionsWorkflow.pfx -ErrorAction Continue
